k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-live-api
spec:
  replicas: 2 # what was the replicaSet providing
  selector:
    matchLabels:
      app: devops-live-api
  template: # describe the pod template
    metadata:
      labels:
        app: devops-live-api
    spec:
      containers:
      - name: devops-live-api
        image: docker.io/library/devops-live-api:1.0
        ports:
        - containerPort: 8000
