k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-live-api
spec:
  selector:
    app: devops-live-api
  ports:
  - port: 8000 
    targetPort: 8000 
  type: ClusterIP
